testsuite/bsc.interra/messages/EBadStringLit/EBadStringLit.bs.bsc-out.expected
checking package dependencies
Error: "EBadStringLit.bs", line 20, column 4: (P0001)
  Bad String literal
